agregue una tabla

--- a/hola.html
+++ b/hola.html
@@ -42,6 +42,28 @@
   </ul>
 
 </form>
+
+
+<form action="" method="get">
+
+
+
+</form>
+
+<table>  
+  <tr>
+    <th>Decimal</th>
+    <th>Binario</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>1</td>
+  </tr>
+  
+</table>
+
+
+
 </body>
 </html>
 
