agregamos inicio de css

--- a/eje1.html
+++ b/eje1.html
@@ -11,6 +11,13 @@
         <li>Boca</li>
         <li>San lorenzo</li>
     </ol>
+    <section class="uno">
+        <div class="uno-uno">
+
+        </div>
+    </section>
+    <section class="dos"></section>
+    <section class="tres"></section>
 
 </body>
 </html>
