--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
       <li class="importante">Punto dos</li>
       <li class="muyimportante">Punto <em>tres</em></li>
     </ul>
+
+    <ul>
+      <li>Punto uno</li>
+      <li class="importante">Punto dos</li>
+      <li class="muyimportante">Punto <em>tres</em></li>
+    </ul>    
   </body>
 </html>
